--- a/config/config-aes-flexible.yaml
+++ b/config/config-aes-flexible.yaml
@@ -27,7 +27,7 @@ encryption:
   # General encryption settings
   algorithm: "AES256_GCM"
   key_rotation_days: 90
-  metadata_key_prefix: "x-s3ep-"
+  metadata_key_prefix: "s3ep-"
 
 # TLS configuration (optional)
 tls:
