--- a/config/config-legacy.yaml
+++ b/config/config-legacy.yaml
@@ -18,4 +18,4 @@ aes_key: "${AES_ENCRYPTION_KEY}"
 # General encryption settings
 algorithm: "AES256_GCM"
 key_rotation_days: 90
-metadata_key_prefix: "x-s3ep-"
+metadata_key_prefix: "s3ep-"
