--- a/config/config-mixed.yaml
+++ b/config/config-mixed.yaml
@@ -42,7 +42,7 @@ encryption:
   # General encryption settings
   algorithm: "AES256_GCM"
   key_rotation_days: 30
-  metadata_key_prefix: "x-s3ep-"
+  metadata_key_prefix: "s3ep-"
 
 # TLS Configuration (optional)
 tls:
