--- a/config/none.yaml
+++ b/config/none.yaml
@@ -2,7 +2,7 @@
 
 # Server configuration
 bind_address: "0.0.0.0:8080"
-log_level: "debug"
+log_level: "info"
 shutdown_timeout: 30  # Graceful shutdown timeout in seconds
 
 # S3 backend configuration (local MinIO)
