--- a/config/none.yaml
+++ b/config/none.yaml
@@ -1,21 +1,21 @@
-# S3 Encryption Proxy Configuration - None Provider for Testing
+# S3 Encryption Proxy Configuration Example - None Provider (No Encryption) for MinIO Testing
 
 # Server configuration
 bind_address: "0.0.0.0:8080"
-log_level: "info"
-shutdown_timeout: 30  # Graceful shutdown timeout in seconds
+log_level: "debug"
 
-# S3 backend configuration (local MinIO)
+# S3 backend configuration (MinIO)
 target_endpoint: "https://localhost:9000"
 region: "us-east-1"
 access_key_id: "minioadmin"
 secret_key: "minioadmin123"
+use_tls: true
+skip_ssl_verification: true
 
 # No Encryption Configuration
 encryption:
   # Active encryption method (used for writing new files)
   encryption_method_alias: "no-encryption"
-  metadata_key_prefix: "s3ep-"
 
   # List of encryption providers (used for reading/decrypting files)
   providers:
