--- a/config/aes-example.yaml
+++ b/config/aes-example.yaml
@@ -9,6 +9,8 @@ target_endpoint: "https://minio:9000"
 region: "us-east-1"
 access_key_id: "minioadmin"
 secret_key: "minioadmin123"
+use_tls: true
+skip_ssl_verification: true
 
 # Multi-Provider Encryption Configuration
 encryption:
