--- a/config/multi-example.yaml
+++ b/config/multi-example.yaml
@@ -1,7 +1,7 @@
 ---
 # Server configuration
 bind_address: "0.0.0.0:8080"
-log_level: "info"
+log_level: "debug"
 log_health_requests: false
 
 # S3 backend configuration
