--- a/docker-compose.demo.yml
+++ b/docker-compose.demo.yml
@@ -48,6 +48,8 @@ services:
     container_name: demo-s3-encryption-proxy
     ports:
       - "8080:8080"
+    environment:
+      - S3EP_LICENSE_TOKEN=${S3EP_LICENSE_TOKEN}
     volumes:
       - ./config/multi-example.yaml:/etc/s3ep/config.yaml:ro
     command: ["./s3-encryption-proxy", "--config", "/etc/s3ep/config.yaml"]
