--- a/deploy/helm/s3-encryption-proxy/templates/deployment.yaml
+++ b/deploy/helm/s3-encryption-proxy/templates/deployment.yaml
@@ -56,6 +56,22 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           env:
+            - name: KUBERNETES_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: KUBERNETES_POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: KUBERNETES_POD_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
+            - name: HELM_RELEASE_NAME
+              value: {{ .Release.Name }}
+            - name: HELM_CHART_VERSION
+              value: {{ .Chart.Version }}
             {{- toYaml .Values.env | nindent 12 }}
           volumeMounts:
             {{- toYaml .Values.volumeMounts | nindent 12 }}
