--- a/deploy/helm/s3-encryption-proxy/values.yaml
+++ b/deploy/helm/s3-encryption-proxy/values.yaml
@@ -258,8 +258,36 @@ monitoring:
     annotations: {}
     # Override port for ServiceMonitor (defaults to monitoring.port)
     port: ""
-    # Override path for ServiceMonitor (defaults to monitoring.metricsPath)  
+    # Override path for ServiceMonitor (defaults to monitoring.metricsPath)
     path: ""
+
+  # Grafana Dashboard configuration
+  grafana:
+    dashboard:
+      enabled: false
+      # Namespace where dashboard ConfigMap should be created
+      namespace: ""  # defaults to release namespace
+      # Labels for dashboard discovery by Grafana
+      labels:
+        grafana_dashboard: "1"
+        # Common labels for Grafana dashboard discovery
+        # app.kubernetes.io/name: grafana
+        # app.kubernetes.io/component: dashboard
+        # Additional custom labels for specific Grafana instances
+        # grafana-instance: "production"
+        # dashboard-category: "monitoring"
+        # team: "platform-engineering"
+      # Custom annotations for the dashboard ConfigMap
+      annotations: {}
+        # Examples of custom annotations:
+        # grafana-folder: "S3 Encryption Proxy"
+        # grafana.com/dashboard-uid: "s3ep-performance"
+        # grafana.com/auto-import: "true"
+        # kubernetes.io/managed-by: "helm"
+        # meta.helm.sh/release-name: "s3-encryption-proxy"
+        # app.kubernetes.io/managed-by: "Helm"
+        # config.kubernetes.io/local-config: "true"
+        # description: "Performance monitoring dashboard for S3 Encryption Proxy"
 
 # Logging
 logging:
