--- a/config/rsa-example.yaml
+++ b/config/rsa-example.yaml
@@ -80,3 +80,22 @@ streaming:
   # then sent as one S3 upload part (default: 12MB = 12 * 1024 * 1024)
   # Minimum: 5MB (S3 requirement), Maximum: 5GB (S3 limit)
   segment_size: 12582912  # 12MB = 12 * 1024 * 1024 bytes
+
+# Performance Optimizations Configuration
+optimizations:
+  # Streaming buffer size for chunk-wise processing (4KB - 2MB)
+  # Default: 64KB (65536 bytes)
+  # Higher values: Better throughput for large files, more memory usage
+  # Lower values: Better for memory-constrained environments, more CPU overhead
+  streaming_buffer_size: 65536  # 64KB
+
+  # Enable adaptive buffering based on system load (experimental)
+  # When enabled, buffer sizes adjust dynamically
+  enable_adaptive_buffering: false
+
+  # Thresholds for processing strategy selection (when adaptive buffering is enabled)
+  # Files smaller than force_traditional_threshold use traditional processing
+  force_traditional_threshold: 1048576  # 1MB
+
+  # Files larger than streaming_threshold always use streaming
+  streaming_threshold: 5242880  # 5MB
