--- a/docker-compose.demo.yml
+++ b/docker-compose.demo.yml
@@ -52,7 +52,7 @@ services:
     environment:
       - S3EP_LICENSE_TOKEN=${S3EP_LICENSE_TOKEN}
     volumes:
-      - ./config/rsa-example.yaml:/etc/s3ep/config.yaml:ro
+      - ./config/aes-example.yaml:/etc/s3ep/config.yaml:ro
     command: ["./s3-encryption-proxy", "--config", "/etc/s3ep/config.yaml"]
     depends_on:
       minio:
