--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,3 @@
-version: "2"
-
 run:
   timeout: 5m
 
@@ -11,5 +9,7 @@ linters:
     - ineffassign
     - misspell
     - staticcheck
-    - unused
+    - gosimple
     - revive
+  disable:
+    - unused  # Disable unused during migration phase
