--- a/config/multi-example.yaml
+++ b/config/multi-example.yaml
@@ -4,13 +4,14 @@ bind_address: "0.0.0.0:8080"
 log_level: "debug"
 log_health_requests: false
 
-# S3 backend configuration
-target_endpoint: "https://minio:9000"
-region: "us-east-1"
-access_key_id: "minioadmin"
-secret_key: "minioadmin123"
-use_tls: true
-skip_ssl_verification: true
+# S3 client configuration (unified structure)
+s3_client:
+  target_endpoint: "https://minio:9000"
+  region: "us-east-1"
+  access_key_id: "minioadmin"
+  secret_key: "minioadmin123"
+  use_tls: true
+  insecure_skip_verify: true
 
 # Multi-Provider Configuration (Both AES and RSA available)
 encryption:
