--- a/config/multi-example.yaml
+++ b/config/multi-example.yaml
@@ -6,7 +6,7 @@ log_health_requests: false
 
 # S3 client configuration (unified structure)
 s3_client:
-  target_endpoint: "https://minio:9000"
+  target_endpoint: "https://localhost:9000"
   region: "us-east-1"
   access_key_id: "minioadmin"
   secret_key: "minioadmin123"
