--- a/config/aes-example.yaml
+++ b/config/aes-example.yaml
@@ -1,7 +1,7 @@
 ---
 # Server configuration
 bind_address: "0.0.0.0:8080"
-log_level: "info"
+log_level: "debug"
 log_health_requests: false  # Disable health endpoint logging by default
 
 # S3 client configuration (unified structure)
