feat: add Not Supported with Encryption error

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,5 +11,4 @@ linters:
     - staticcheck
     - gosimple
     - revive
-  disable:
-    - unused  # Disable unused during migration phase
+    - unused
