--- a/config/none-example.yaml
+++ b/config/none-example.yaml
@@ -13,6 +13,43 @@ s3_backend:
   use_tls: true
   insecure_skip_verify: true
 
+# S3 Client Authentication Configuration (Enterprise Security)
+# This enables strict authentication for all S3 API calls
+s3_clients:
+  # Production application client
+  - type: "static"
+    access_key_id: "user0"
+    secret_key: "this-is-not-very-secure" # minimum 16 characters
+    description: "the user0 has same accessright like s3_backend-credentials"
+
+  # Backend service client
+  - type: "static"
+    access_key_id: "user1"
+    secret_key: "this-is-even-worse" # minimum 16 characters
+    description: "the user1 has same accessright like s3_backend-credentials"
+
+# S3 Security Configuration (Cybersecurity Features)
+s3_security:
+  # Enable strict AWS Signature V4 validation (recommended: true)
+  strict_signature_validation: true
+
+  # Maximum allowed clock skew in seconds (default: 900 = 15 minutes)
+  # Shorter values provide better security against replay attacks
+  max_clock_skew_seconds: 300  # 5 minutes for high security
+
+  # Enable rate limiting per client IP (recommended: true)
+  enable_rate_limiting: true
+
+  # Maximum requests per minute per IP (adjust based on load)
+  max_requests_per_minute: 60  # Conservative limit
+
+  # Enable comprehensive security logging (recommended: true)
+  enable_security_logging: true
+
+  # Block IPs after this many failed authentication attempts
+  max_failed_attempts: 5  # Strict security - block after 5 failures
+
+
 # No Encryption Configuration
 encryption:
   # Active encryption method (used for writing new files)
