--- a/config/aes-example.yaml
+++ b/config/aes-example.yaml
@@ -49,6 +49,10 @@ s3_security:
   # Block IPs after this many failed authentication attempts
   max_failed_attempts: 5  # Strict security - block after 5 failures
 
+  # Automatically unblock IPs after this many seconds (default: 60)
+  # 0 = never unblock automatically (manual intervention required)
+  unblock_ip_seconds: 60  # Unblock after 1 minute
+
 monitoring:
   enabled: true
   bind_address: ":9090"
