--- a/config/rsa-example.yaml
+++ b/config/rsa-example.yaml
@@ -2,6 +2,7 @@
 # Server configuration
 bind_address: "0.0.0.0:8080"
 log_level: "debug"
+log_format: "text"   # "text" (default) or "json" - controls log output format
 log_health_requests: false  # Disable health endpoint logging by default
 
 # S3 backend configuration (unified structure)
