--- a/config/aes-example.yaml
+++ b/config/aes-example.yaml
@@ -2,7 +2,7 @@
 # Server configuration
 bind_address: "0.0.0.0:8080"
 
-log_level: "info"
+log_level: "debug"
 log_format: "text"   # "text" (default) or "json" - controls log output format
 
 log_health_requests: false  # Disable health endpoint logging by default
