--- a/config/aes-example.yaml
+++ b/config/aes-example.yaml
@@ -91,7 +91,7 @@ encryption:
   #              On upload, HMAC is always added. Good for migration scenarios.
   #
   # Default: "off" (for backward compatibility)
-  integrity_verification: "lax"
+  integrity_verification: "off"
 
   # Custom metadata prefix - this will be used instead of default "s3ep-"
   # All encryption metadata keys will use this prefix
